@@ -518,8 +518,9 @@ class Documenter(object):
 
         Members are skipped if
 
-        - they are private (except if given explicitly)
-        - they are undocumented (except if undoc-members is given)
+        - they are private (except if given explicitly or the private-members
+          option is set)
+        - they are undocumented (except if the undoc-members option is set)
 
         The user can override the skipping decision by connecting to the
         ``autodoc-skip-member`` event.
@@ -541,7 +542,7 @@ class Documenter(object):
 
             if want_all and membername.startswith('_'):
                 # ignore members whose name starts with _ by default
-                skip = True
+                skip = not self.options.private_members
             elif (namespace, membername) in attr_docs:
                 # keep documented attributes
                 skip = False
@@ -713,6 +714,7 @@ class ModuleDocumenter(Documenter):
         'show-inheritance': bool_option, 'synopsis': identity,
         'platform': identity, 'deprecated': bool_option,
         'member-order': identity, 'exclude-members': members_set_option,
+        'private-members': bool_option,
     }
 
     @classmethod
@@ -866,7 +868,7 @@ class ClassDocumenter(ModuleLevelDocumenter):
         'members': members_option, 'undoc-members': bool_option,
         'noindex': bool_option, 'inherited-members': bool_option,
         'show-inheritance': bool_option, 'member-order': identity,
-        'exclude-members': members_set_option,
+        'exclude-members': members_set_option, 'private-members': bool_option,
     }
 
     @classmethod
@@ -1134,7 +1136,7 @@ class AutoDirective(Directive):
 
     # flags that can be given in autodoc_default_flags
     _default_flags = set(['members', 'undoc-members', 'inherited-members',
-                          'show-inheritance'])
+                          'show-inheritance', 'private-members'])
 
     # standard docutils directive settings
     has_content = True
