@@ -30,6 +30,7 @@ def setup_module():
     options = Struct(
         inherited_members = False,
         undoc_members = False,
+        private_members = False,
         show_inheritance = False,
         noindex = False,
         synopsis = '',
